# gojoe

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  go.mod  go.sum  hmon.go  index.html  package-lock.json  package.json  server.go  tailwind.config.js  tailwind.css  ws.go
.github/workflows/: main.yml
go-server/: go.mod  go.sum  hmon.go  server.go  ws.go
rust-server/: Cargo.toml
rust-server/src/: main.rs
rust-server/static/: index.html  index.js  styles.css
src/: App.css  App.tsx  Home.tsx  Navbar.tsx  Projects.tsx  Search.tsx
static/css/: input.css  styles.css  tailwind.css
static/js/: script.js
templates/: climbing.html  gojoe.html  graph.html  hmon.html  home.html  layout.html  navbar.html  projects.html  search.html
