[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
axum = "0.8.0-rc.1"
tower-http = { version = "0.6.2", features = ["trace", "fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "local-time"] }
markdown = "1.0.0-alpha.21"
handlebars = "6.2.0"
serde_json = "1.0.134"
